# Scripted_Styles

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
automation/drivers/: driver_post_single_image.py  driver_several_code_scripts.py  driver_single_code_script.py
automation/instagram/: ig_fb_post.py
automation/mockup_generation/: generate_mockups.py  generate_mockups_base.py  generate_mockups_func.py  mockup_vid_generation.py  mockup_vid_generation1.py  params.csv
automation/printify/: canvas_requests.py  convert.py  notes.txt  params.csv  printify_test.py  prod_info_create.py  product_information.csv  sposter_requests_nopublish.py  sposter_requests_publish.py  variant_info.csv
designs/ai/: Readall_andnew.py  ai_generated.py  ai_test.py  lichtenberg.py  lichtenbergv2.py  lictenbergv1.py
designs/convolution/: first_one.py
designs/heatmaps/: flowers.py  flowers_v2.py  flowers_v3.py  flowers_v4.py  other_shape1.py  superformula_heatmap.py  turtle_density_feed.py
designs/logo/: eternal_ensemble.py
designs/number_theory/: take2.py
designs/particle_simulations/: 2d_particle_gas_heatmap.py  new_v.py  new_v2.py  particle_test.py  pool_balls.py  pool_balls_specialcoloring.py  vf.py  vi.py  vi_straightlines.py
designs/random_walks/: Random_walk_NO_SUM.py  Random_walk_NO_SUM_very_largepy.py  Random_walk_NO_SUM_very_largepy_ppackets.py  Random_walk_SUM.py  Random_walk_model.py  func.py  func_ppackets.py
designs/utils/: check.py  (+7 more)
docs/: Pinterest.html  User_Data_Deletion.html  privacy_policy.txt  user_data_deletion.txt
tests/: test_utils.py
(+91 files in other folders)
